--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-inject-string": "^1.1.0",
+    "gulp-replace-name": "^1.0.1",
+    "gulp-tap": "^0.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
