--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "clipboard": "^1.6.0",
     "vue": "^2.1.10",
+    "vue-easy-toast": "^0.2.4",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
